# libbar

./: .gitignore  CMakeLists.txt  barConfig.cmake.in  flake.nix  result
